--- a/models/staging/jaffle_shop/stg_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/stg_jaffle_shop.yml
@@ -2,13 +2,13 @@ version: 2
 
 models:
   - name: stg_customers
-    columns:
+    columns: 
       - name: customer_id
         tests:
           - unique
           - not_null
   - name: stg_orders
-    columns:
+    columns: 
       - name: order_id
         tests:
           - unique
@@ -16,14 +16,14 @@ models:
       - name: status
         tests:
           - accepted_values:
-              values: 
+              values:
                 - completed
-                - returned
                 - shipped
+                - returned
                 - placed
                 - return_pending
       - name: customer_id
         tests:
-          - relatioships:
+          - relationships:
               to: ref('stg_customers')
               field: customer_id
