--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -34,7 +34,9 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   jaffle_shop:
     staging:
+      schema: transient
       +materialized: view
     marts:
       core: 
+        +schema: final
         +materialized: table  
