--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -33,6 +33,7 @@ clean-targets:         # directories to be removed by `dbt clean`
 # as tables. These settings can be overridden in the individual model files
 # using the `{{ config(...) }}` macro.
 models:
+  +hours_to_expiration: 240
   +persist_docs:
     relation: true
     columns: true
