--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -35,17 +35,15 @@ clean-targets:         # directories to be removed by `dbt clean`
 # using the `{{ config(...) }}` macro.
 seeds:
   jaffle_shop:
+    +enabled: "{{ true if target.name == 'qa' else false }}"  
     +tags: ["dbt"]
     raw_customers:
-      +enabled: true
       +schema: input
       +alias: customers
     raw_orders:
-      +enabled: true
       +schema: input
       +alias: orders
     raw_payments:
-      +enabled: true
       +schema: input
       +alias: payments
 
